🚡👯 Checkpoint ./index.html:69253357/3061 ./contact.html:69253357/1958

--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
-<!DOCTYPE html>
-<html>
-  
-</html>
+<header>
+  <img
+    length="300px"
+    src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
+  />
+  <nav>
+    <a href="index.html">HOME</a>
+    <a href="gallery.html">GALLERY</a>
+    <a href="contact.html">CONTACT</a>
+  </nav>
+</header>
+<h1>Welcome to Baton Rouge</h1>
+<h2><i>Fun Facts</i></h2>
+<p>
+  As the capital city of Louisiana, Baton Rouge is the heart and soul of the
+  state’s eclectic culture. With over 300 years of history, Baton Rouge has a
+  colorful story to tell, which can be tasted through our culinary offerings,
+  seen through the picturesque views of the Mississippi River and historical
+  landmarks and experienced through the vibrant arts and culture scene.
+</p>
+<p>
+  In the “Red Stick,” every day is worth celebrating, even more so through our
+  festivals and events held throughout the year. So, sit back, relax, and let us
+  make the planning easy – we’ll be waiting to welcome you with Southern
+  hospitality and an authentic Louisiana experience!
+</p>
