🍲⛲️ Checkpoint ./gallery.html:69253357/899 ./index.html:69253357/102

--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <header>
+  <nav>
+    <a href="index.html">HOME</a>
+    <a href="gallery.html">GALLERY</a>
+    <a href="contact.html">CONTACT</a>
+    </nav>
+  </header>
+  <body>
 <h1>
   Baton Rouge
 </h1>
@@ -11,9 +21,18 @@
   <td><img width="200px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSLo53ii0NDl8zQ5UTE9tMeQzCfPGCbjoBJQ&s"></td>
   </tr>
   <tr>
-  <td><img src=""></td>
-  <td>image 5</td>
-  <td>image 6</td>
+  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlg5wKi-2-uDS5cHwAhcPspTdHWe_AAaXLkg&s"></td>
+  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCo3hZeuYF6fEV4vnd01ID63bOcyTHX4iJxw&s"></td>
+  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjAp47z9VPN7kSXnUT4RHjVsvzrKugX5AoTA&s"></td>
   </tr>
 </table>
-<footer>Website created by Andrea Ballard</footer>
+    <hr>
+<footer>
+  <p>
+    
+  Website created by Andrea Ballard <br>
+    COPYRIGHT 2024
+  </p>
+    </footer>
+  </body>
+</html>
