--- a/index.html
+++ b/index.html
@@ -24,3 +24,9 @@
   make the planning easy – we’ll be waiting to welcome you with Southern
   hospitality and an authentic Louisiana experience!
 </p>
+<footer>
+<p>
+  Website created by Andrea Ballard
+  COPYRIGHT 2024
+  </p>
+</footer>
