🏹🏩 Checkpoint ./gallery.html:69253357/370 ./contact.html:69253357/531 ./index.html:69253357/180

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+  <main>
+  <title>Baton Rouge</title>
 <header>
   <img
     length="300px"
-    src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
-  />
+    src="https://www.brla.gov/ImageRepository/Document?documentId=12681">
   <nav>
     <a href="index.html">HOME</a>
     <a href="gallery.html">GALLERY</a>
@@ -24,9 +27,12 @@
   make the planning easy – we’ll be waiting to welcome you with Southern
   hospitality and an authentic Louisiana experience!
 </p>
+  </main>
+  </body>
 <footer>
 <p>
   Website created by Andrea Ballard
-  COPYRIGHT 2024
+  <i>COPYRIGHT 2024</i>
   </p>
 </footer>
+</html>
