--- a/gallery.html
+++ b/gallery.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <header>
-  <nav>
-    <a href="index.html">HOME</a>
-    <a href="gallery.html">GALLERY</a>
-    <a href="contact.html">CONTACT</a>
-    </nav>
-  </header>
+<html lang="en">
   <body>
 <h1>
   Baton Rouge
 </h1>
 <h2>
-  Baton Rouge Gallery
+  <u>Baton Rouge Gallery</u>
 </h2>
 <table>
   <tr>
@@ -28,10 +21,17 @@
 </table>
     <hr>
 <footer>
+  SITEMAP:
+   <nav>
+    <a href="index.html">HOME</a><br>
+    <a href="gallery.html">GALLERY</a><br>
+    <a href="contact.html">CONTACT</a>
+    </nav>
+  <hr>
   <p>
     
   Website created by Andrea Ballard <br>
-    COPYRIGHT 2024
+    <i>COPYRIGHT 2024</i>
   </p>
     </footer>
   </body>
