🎳👩‍❤️‍💋‍👩 Checkpoint ./contact.html:69253357/415

--- a/contact.html
+++ b/contact.html
@@ -24,3 +24,12 @@
     Submit
   </button>
 </form>
+<footer>
+
+  <hr>
+  <p>
+    
+  Website created by Andrea Ballard <br>
+    <i>COPYRIGHT 2024</i>
+  </p>
+    </footer>
