📙🌈 Checkpoint ./gallery.html:69253357/3818 ./index.html:69253357/2694 ./contact.html:69253357/89

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <header>
-  <img
+  <img alt="welcome"
     length="300px"
     src="https://www.brla.gov/ImageRepository/Document?documentId=12681"> 
   <nav>
@@ -7,7 +7,7 @@
     <a href="gallery.html">GALLERY</a>
     <a href="contact.html">CONTACT</a>
     </nav>
-</header>
+</header><body><main>
 <h1>
   <u>Contact</u>
 </h1>
@@ -24,6 +24,7 @@
     Submit
   </button>
 </form>
+  </main></body>
 <footer>
 
   <hr>
