--- a/gallery.html
+++ b/gallery.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+  <header>
+    <img
+      alt="welcome"
+      length="300px"
+      src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
+    />
+  </header>
   <body>
-<h1>
-  Baton Rouge
-</h1>
-<h2>
-  <u>Baton Rouge Gallery</u>
-</h2>
-<table>
-  <tr>
-  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGZ-yT4U2R9WqwwIf6Nt4xGkuyqiDbKHLMVg&s"></td>
-  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSawckb0LXiE40GHWw2fXQDy8K1GrWCwJFGJA&s"></td>
-  <td><img width="200px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSLo53ii0NDl8zQ5UTE9tMeQzCfPGCbjoBJQ&s"></td>
-  </tr>
-  <tr>
-  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlg5wKi-2-uDS5cHwAhcPspTdHWe_AAaXLkg&s"></td>
-  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCo3hZeuYF6fEV4vnd01ID63bOcyTHX4iJxw&s"></td>
-  <td><img width="250px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjAp47z9VPN7kSXnUT4RHjVsvzrKugX5AoTA&s"></td>
-  </tr>
-</table>
-    <hr>
-<footer>
-  SITEMAP:
-   <nav>
-    <a href="index.html">HOME</a><br>
-    <a href="gallery.html">GALLERY</a><br>
-    <a href="contact.html">CONTACT</a>
-    </nav>
-  <hr>
-  <p>
-    
-  Website created by Andrea Ballard <br>
-    <i>COPYRIGHT 2024</i>
-  </p>
+    <main>
+      <h1>Baton Rouge</h1>
+      <h2>
+        <u>Baton Rouge Gallery</u>
+      </h2>
+      <table>
+        <tr>
+          <td>
+            <img
+              alt="bridge"
+              width="250px"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGZ-yT4U2R9WqwwIf6Nt4xGkuyqiDbKHLMVg&s"
+            />
+          </td>
+          <td>
+            <img
+              alt="stadium"
+              width="250px"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSawckb0LXiE40GHWw2fXQDy8K1GrWCwJFGJA&s"
+            />
+          </td>
+          <td>
+            <img
+              alt="food"
+              width="200px"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSSLo53ii0NDl8zQ5UTE9tMeQzCfPGCbjoBJQ&s"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img
+              alt="food"
+              width="250px"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlg5wKi-2-uDS5cHwAhcPspTdHWe_AAaXLkg&s"
+            />
+          </td>
+          <td>
+            <img
+              alt="tree"
+              width="250px"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCo3hZeuYF6fEV4vnd01ID63bOcyTHX4iJxw&s"
+            />
+          </td>
+          <td>
+            <img
+              alt="band"
+              width="250px"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjAp47z9VPN7kSXnUT4RHjVsvzrKugX5AoTA&s"
+            />
+          </td>
+        </tr>
+      </table>
+    </main>
+    <hr />
+    <footer>
+      SITEMAP:
+      <nav>
+        <a href="index.html">HOME</a><br />
+        <a href="gallery.html">GALLERY</a><br />
+        <a href="contact.html">CONTACT</a>
+      </nav>
+      <hr />
+      <p>
+        Website created by Andrea Ballard <br />
+        <i>COPYRIGHT 2024</i>
+      </p>
     </footer>
   </body>
 </html>
