--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+  <title>contact</title>
 <header>
-  <img alt="welcome"
+  <img
+    alt="welcome"
     length="300px"
-    src="https://www.brla.gov/ImageRepository/Document?documentId=12681"> 
+    src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
+  />
   <nav>
     <a href="index.html">HOME</a>
     <a href="gallery.html">GALLERY</a>
     <a href="contact.html">CONTACT</a>
-    </nav>
-</header><body><main>
-<h1>
-  <u>Contact</u>
-</h1>
-<form>
-  <p>
-    Your Email<br>
-    <input type="text"
-  </p>
-    <p>
-      Comments<br>
-      <textarea></textarea>
-  </p>
-  <button>
-    Submit
-  </button>
-</form>
-  </main></body>
+  </nav>
+</header>
+<body>
+  <main>
+    <h1>
+      <u>Contact</u>
+    </h1>
+    <form>
+      <p>
+        Your Email<br />
+        <input type="text">
+      </p>
+      <p>
+        Comments<br />
+        <textarea></textarea>
+      </p>
+      <button>Submit</button>
+    </form>
+  </main>
+</body>
 <footer>
-
-  <hr>
+  <hr />
   <p>
-    
-  Website created by Andrea Ballard <br>
+    Website created by Andrea Ballard <br />
     <i>COPYRIGHT 2024</i>
   </p>
-    </footer>
+</footer>
+</html>
