🎫🎠 Checkpoint ./gallery.html:69253357/368 ./index.html:69253357/7

--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,11 @@
       length="300px"
       src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
     />
+      <nav>
+        <a href="index.html">HOME</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="contact.html">CONTACT</a>
+      </nav>
   </header>
   <body>
     <main>
@@ -65,12 +70,7 @@
     </main>
     <hr />
     <footer>
-      SITEMAP:
-      <nav>
-        <a href="index.html">HOME</a><br />
-        <a href="gallery.html">GALLERY</a><br />
-        <a href="contact.html">CONTACT</a>
-      </nav>
+      
       <hr />
       <p>
         Website created by Andrea Ballard <br />
