🚕💘 Checkpoint ./index.html:69253357/11712

--- a/index.html
+++ b/index.html
@@ -31,10 +31,47 @@
         and let us make the planning easy – we’ll be waiting to welcome you with
         Southern hospitality and an authentic Louisiana experience!
       </p>
-      
+      <h2>
+        
+      </h2>
+      <p>
+        European settlement French colonists established a trading post and
+        military in 1721 at the site of a Muscogee boundary marker called a
+        bâton rouge, or "red stick". The city's name comes from this marker.
+      </p>
+      <h2>id="Spanish Influence">Spanish Influence</h2>
+      <p>
+        In 1779, the Spanish defeated the English at Fort
+        Butte and captured Baton Rouge. During Spanish Colonial occupation, the
+        city was part of West Florida and a fort called Fort San Carlos was
+        built on the river. The Spanish allowed French settlers to maintain
+        their language and customs, but in 1766, the first Spanish colonial
+        governor, Don Antonio de Ulloa, imposed trade restrictions that angered
+        the settlers. In 1768, the settlers rebelled and forced de Ulloa out,
+        but Spain retook the colony in 1769. In 1805, the Spanish Town District
+        was founded, which is now the oldest neighborhood in the city and has
+        the oldest architecture.
+      </p>
+      <h2>id="Civil War">Civil War</h2>
+      <p>
+        Baton Rouge was under Union control for most of the Civil War,
+        except for a brief period in 1862.
+      </p>
+      <h2>id="Other Notable Events">Other Events</h2>
+      <p>
+        In 1810, local settlers overthrew the Spanish and
+        declared the area the West Florida Republic. Baton Rouge was
+        incorporated in 1817 and became the state capital in 1849. In 1846, the
+        city replaced New Orleans as the state capital and construction began on
+        the Neo-Gothic capitol building, which is now a National Historic
+        Landmark. Baton Rouge was also the site of the first major boycott of
+        the South during the Civil Rights Movement, when African Americans
+        refused to ride segregated buses. The boycott sparked a national
+        conversation and led to other notable protests.
+      </p>
     </main>
   </body>
-  <hr>
+  <hr />
   <footer>
     <p>
       Website created by Andrea Ballard
