💽🏋 Checkpoint ./gallery.html:69253357/28 ./contact.html:69253357/20 ./index.html:69253357/20

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <header>
         <img
           alt="welcome"
-          length="300px"
+          width="100%"
           src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
         />
         <nav>
