🚜🚥 Checkpoint ./index.html:69253357/510

--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
       <h1>Welcome to Baton Rouge</h1>
 
       <h2 id="funfacts">Fun Facts</h2>
-      <p>
-        
+      <div
+        class="card">
+      </div>
+      <img class="card-img-top"
+           src=https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg
+     />
+           <div
+             class-"card-body"> 
+           <p class-"card-text">   
         As the capital city of Louisiana, Baton Rouge is the heart and soul of
         the state’s eclectic culture.
       </p>
