--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
       <h2 id="funfacts">Fun Facts</h2>
       <div
         class="card">
-      </div>
       <img class="card-img-top"
-           src=https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg
+           src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
-           <div
-             class-"card-body"> 
+           <div class-"card-body"> 
            <p class-"card-text">   
         As the capital city of Louisiana, Baton Rouge is the heart and soul of
         the state’s eclectic culture.
-      </p>
-
+             </p>
+        </div>
+      </div>
       <p>
         With over 300 years of history, Baton Rouge has a colorful story to
         tell, which can be tasted through our culinary offerings, seen through
