🏡🏕 Checkpoint ./index.html:69253357/212

--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
         As the capital city of Louisiana, Baton Rouge is the heart and soul of
         the state’s eclectic culture.
              </p>
-        </div>
-      </div>
-      <p>
+      <p class="card-text">
         With over 300 years of history, Baton Rouge has a colorful story to
         tell, which can be tasted through our culinary offerings, seen through
         the picturesque views of the Mississippi River and historical landmarks
         and experienced through the vibrant arts and culture scene.
       </p>
-      <p>
+      <p class="card-text">
         In the “Red Stick,” every day is worth celebrating, even more so through
         our festivals and events held throughout the year. So, sit back, relax,
         and let us make the planning easy – we’ll be waiting to welcome you with
         Southern hospitality and an authentic Louisiana experience!
       </p>
+        </div>
+      </div>
       <h2 id="europeansettlement">European Settlement</h2>
-      <p>
+      <p class="card-text">
         French colonists established a trading post and military in 1721 at the
         site of a Muscogee boundary marker called a bâton rouge, or "red stick".
         The city's name comes from this marker.
       </p>
 
       <h2 id="spanishinfluence">Spanish Influence</h2>
-      <p>
+      <p class="card-text">
         In 1779, the Spanish defeated the English at Fort Butte and captured
         Baton Rouge. During Spanish Colonial occupation, the city was part of
         West Florida and a fort called Fort San Carlos was built on the river.
@@ -78,13 +78,13 @@
       </p>
 
       <h2 id="civilwar">Civil War</h2>
-      <p>
+      <p class="card-text">
         Baton Rouge was under Union control for most of the Civil War, except
         for a brief period in 1862.
       </p>
 
       <h2 id="othernotableevents">Other Events</h2>
-      <p>
+      <p class="card-text">
         In 1810, local settlers overthrew the Spanish and declared the area the
         West Florida Republic. Baton Rouge was incorporated in 1817 and became
         the state capital in 1849.
