🎡🌆 Checkpoint ./index.html:69253357/34

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
   <hr />
   <footer>
     Section Bookmarks:
+   <div>
+     
+    </div>
     <nav>
       <a href="#funfacts">Fun Facts</a><br />
       <a href="#europeansettlement">European Settlement</a><br />
