🍕❣️ Checkpoint ./index.html:69253357/141

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <title>Baton Rouge</title>
+      <title >Baton Rouge</title>
       <header>
         <img
           alt="welcome"
@@ -23,20 +23,20 @@
           <a href="contact.html">CONTACT</a>
         </nav>
       </header>
-      <h1>Welcome to Baton Rouge</h1>
+      <h1 class=text-primary>Welcome to Baton Rouge</h1>
 
-      <h2 id="funfacts">Fun Facts</h2>
+      <h2 id="funfacts" class=text-danger>Fun Facts</h2>
       <div
         class="card">
       <img class="card-img-top"
            src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
            <div class-"card-body"> 
-           <p class-"card-text">   
+           <p class-"card-text" class=text-info>   
         As the capital city of Louisiana, Baton Rouge is the heart and soul of
         the state’s eclectic culture.
              </p>
-      <p class="card-text">
+      <p class="card-text" class=text>
         With over 300 years of history, Baton Rouge has a colorful story to
         tell, which can be tasted through our culinary offerings, seen through
         the picturesque views of the Mississippi River and historical landmarks
