🎂✨ Checkpoint ./index.html:69253357/475

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous"
   />
   </head>
-  <body>
+  <body class=bg-secondary>
     <main>
       <title >Baton Rouge</title>
       <header>
@@ -31,12 +31,12 @@
       <img class="card-img-top"
            src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
-           <div class-"card-body"> 
-           <p class-"card-text" class=text-info>   
+           <div class-"card-body" class=bg-warning class=text-succes> 
+           <p class-"card-text" class=text-success>   
         As the capital city of Louisiana, Baton Rouge is the heart and soul of
         the state’s eclectic culture.
              </p>
-      <p class="card-text" class=text>
+      <p class="card-text">
         With over 300 years of history, Baton Rouge has a colorful story to
         tell, which can be tasted through our culinary offerings, seen through
         the picturesque views of the Mississippi River and historical landmarks
@@ -50,14 +50,14 @@
       </p>
         </div>
       </div>
-      <h2 id="europeansettlement">European Settlement</h2>
+      <h2 id="europeansettlement"class= text-danger>European Settlement</h2>
       <p>
         French colonists established a trading post and military in 1721 at the
         site of a Muscogee boundary marker called a bâton rouge, or "red stick".
         The city's name comes from this marker.
       </p>
 
-      <h2 id="spanishinfluence">Spanish Influence</h2>
+      <h2 id="spanishinfluence" class=text-danger>Spanish Influence</h2>
       <p>
         In 1779, the Spanish defeated the English at Fort Butte and captured
         Baton Rouge. During Spanish Colonial occupation, the city was part of
@@ -77,13 +77,13 @@
         neighborhood in the city and has the oldest architecture.
       </p>
 
-      <h2 id="civilwar">Civil War</h2>
+      <h2 id="civilwar" class=text-danger>Civil War</h2>
       <p>
         Baton Rouge was under Union control for most of the Civil War, except
         for a brief period in 1862.
       </p>
 
-      <h2 id="othernotableevents">Other Events</h2>
+      <h2 id="othernotableevents" class=text-danger>Other Events</h2>
       <p>
         In 1810, local settlers overthrew the Spanish and declared the area the
         West Florida Republic. Baton Rouge was incorporated in 1817 and became
@@ -101,7 +101,7 @@
     </main>
   </body>
   <hr />
-  <footer>
+  <footer class=text-warning>
     Section Bookmarks:
    <div>
      
