🕷🙌 Checkpoint ./index.html:69253357/119 ./gallery.html:69253357/67

--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,9 @@
       <a href="contact.html">CONTACT</a>
     </nav>
   </header>
-  <body>
+  <body class=bg-secondary>
     <main>
-      <h1>Baton Rouge</h1>
+      <h1 class=text-danger ><b>Baton Rouge</b></h1>
       <h2>
         <u>Baton Rouge Gallery</u>
       </h2>
