--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           width="100%"
           src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
         />
-        <nav>
+        <nav class=text-light>
           <a href="index.html">HOME</a>
           <a href="gallery.html">GALLERY</a>
           <a href="contact.html">CONTACT</a>
         </nav>
       </header>
-      <h1 class=text-primary>Welcome to Baton Rouge</h1>
+      <h1 class=text-primary><b>Welcome to Baton Rouge</b></h1>
 
       <h2 id="funfacts" class=text-danger>Fun Facts</h2>
       <div
@@ -34,19 +34,19 @@
            <div class-"card-body" class=bg-warning> 
            <p class-"card-text" class=text-success>   
         <b>As the capital city of Louisiana, Baton Rouge is the heart and soul of
-        the state’s eclectic culture.
+          the state’s eclectic culture.</b>
              </p>
       <p class="card-text" class=text-success>
-        With over 300 years of history, Baton Rouge has a colorful story to
+        <i>With over 300 years of history, Baton Rouge has a colorful story to
         tell, which can be tasted through our culinary offerings, seen through
         the picturesque views of the Mississippi River and historical landmarks
-        and experienced through the vibrant arts and culture scene.
+          and experienced through the vibrant arts and culture scene.</i>
       </p>
       <p class="card-text" class=text-success>
-        In the “Red Stick,” every day is worth celebrating, even more so through
+       <b> In the “Red Stick,” every day is worth celebrating, even more so through
         our festivals and events held throughout the year. So, sit back, relax,
         and let us make the planning easy – we’ll be waiting to welcome you with
-        Southern hospitality and an authentic Louisiana experience!
+         Southern hospitality and an authentic Louisiana experience!</b>
       </p>
         </div>
       </div>
