--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class=bg-secondary>
     <main>
-      <title >Baton Rouge</title>
+      <title>Baton Rouge</title>
       <header>
         <img
           alt="welcome"
@@ -27,7 +27,7 @@
 
       <h2 id="funfacts" class=text-danger>Fun Facts</h2>
       <div
-        class="card">
+        class="card" class="p-5 border">
       <img class="card-img-top"
            src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
