😼🚜 Checkpoint ./index.html:69253357/52

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <img class="card-img-top"
            src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
-           <div class-"card-body" class=bg-warning> 
+           <div class-"card-body" class=bg-warning class="p-5 border"> 
            <p class-"card-text" class=text-success>   
         <b>As the capital city of Louisiana, Baton Rouge is the heart and soul of
-          the state’s eclectic culture.</b>
+          the state’s eclectic culture.</b>   
              </p>
       <p class="card-text" class=text-success>
         <i>With over 300 years of history, Baton Rouge has a colorful story to
@@ -48,7 +48,7 @@
         and let us make the planning easy – we’ll be waiting to welcome you with
          Southern hospitality and an authentic Louisiana experience!</b>
       </p>
-        </div>
+      
       </div>
      <h2 id="europeansettlement"class= text-danger>European Settlement</h2>
      <div class="card">
