--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <link
@@ -8,6 +8,7 @@
     crossorigin="anonymous"
   />
   </head>
+  <!--This is a comment -->
   <body class=bg-secondary>
     <main>
       <title>Baton Rouge</title>
@@ -17,17 +18,17 @@
           width="100%"
           src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
         />
-        <nav class=text-light>
+        <nav class="text-light">
           <a href="index.html">HOME</a>
           <a href="gallery.html">GALLERY</a>
           <a href="contact.html">CONTACT</a>
         </nav>
       </header>
-      <h1 class=text-primary><b>Welcome to Baton Rouge</b></h1>
+      <h1 class="text-primary"><b>Welcome to Baton Rouge</b></h1>
 
-      <h2 id="funfacts" class=text-danger>Fun Facts</h2>
-      <div
-        class="card" class="p-5 border">
+      <h2 id="funfacts" class="text-danger">Fun Facts</h2>
+      < div
+        class="card p-5 border" >
       <img class="card-img-top"
            src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
