--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <h1 class="text-primary"><b>Welcome to Baton Rouge</b></h1>
 
       <h2 id="funfacts" class="text-danger">Fun Facts</h2>
-      < div
+      <div
         class="card p-5 border" >
       <img class="card-img-top"
            src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/batonrouge/StateCapitol_CrowdRiff2023_B1455E3D-BA12-7520-FFCB4FE53EC4BAB1-b1455df2a900d7d_b145609b-cb75-3746-ebd4ab608cf9567b.jpg"
      />
-           <div class-"card-body" class=bg-warning class="p-5 border"> 
-           <p class-"card-text" class=text-success>   
+           <div class="card-body bg-warning p-5 border"> 
+           <p class-"card-text text-success">   
         <b>As the capital city of Louisiana, Baton Rouge is the heart and soul of
           the state’s eclectic culture.</b>   
              </p>
@@ -49,7 +49,7 @@
         and let us make the planning easy – we’ll be waiting to welcome you with
          Southern hospitality and an authentic Louisiana experience!</b>
       </p>
-      
+        </div> 
       </div>
      <h2 id="europeansettlement"class= text-danger>European Settlement</h2>
      <div class="card">
