🦃🍜 Checkpoint ./index.html:69253357/253 ./gallery.html:69253357/81

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
           width="100%"
           src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
         />
-        <nav class="text-light">
-          <a href="index.html">HOME</a>
-          <a href="gallery.html">GALLERY</a>
-          <a href="contact.html">CONTACT</a>
+       <div class="p-2 bg-danger">
+        <nav class="nav nav-tabs">
+          <a class="nav nav-link" href="index.html">HOME</a>
+          <a class="nav nav-link" href="gallery.html">GALLERY</a>
+          <a class="nav nav-link" href="contact.html">CONTACT</a>
         </nav>
+        </div>
       </header>
       <h1 class="text-primary"><b>Welcome to Baton Rouge</b></h1>
 
