--- a/gallery.html
+++ b/gallery.html
@@ -7,15 +7,15 @@
       width="100%"
       src="https://www.brla.gov/ImageRepository/Document?documentId=12681"
     />
-    <nav>
-      <a href="index.html">HOME</a>
-      <a href="gallery.html">GALLERY</a>
-      <a href="contact.html">CONTACT</a>
+    <nav class="nav nav-pills">
+      <a  class="nav-link" href="index.html">HOME</a>
+      <a class="nav-link" href="gallery.html">GALLERY</a>
+      <a class="nav-link" href="contact.html">CONTACT</a>
     </nav>
   </header>
-  <body class=bg-secondary>
+  <body class="bg-secondary">
     <main>
-      <h1 class=text-danger ><b>Baton Rouge</b></h1>
+      <h1 class="text-danger"><b>Baton Rouge</b></h1>
       <h2>
         <u>Baton Rouge Gallery</u>
       </h2>
