🍲👩‍👩‍👦 Checkpoint ./mememe.html:69253357/21 ./gallery.html:69253357/4

--- a/mememe.html
+++ b/mememe.html
@@ -13,3 +13,7 @@ problems
 # 18, 20, 21, 24, 25, 27, 29- i need help here
 
 i need help on these number to im confused on how to incorporate it in my project
+
+
+
+add an about page
