--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <title>gallery</title>
-  <header>
+  <head>
     <img
       alt="welcome"
       width="100%"
@@ -12,7 +12,7 @@
       <a class="nav-link" href="gallery.html">GALLERY</a>
       <a class="nav-link" href="contact.html">CONTACT</a>
     </nav>
-  </header>
+  </head>
   <body class="bg-secondary">
     <main>
       <h1 class="text-danger"><b>Baton Rouge</b></h1>
