--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous"
   />
     <style>
-      body{ background-color:#FA8072}
+      body{ background-color:#FA8072; border-style: solid; font-family: cursive}
       h1{font-size:3w}
       
       
@@ -32,6 +32,13 @@
         </nav>
         </div>
       </header>
+      <div class="container">
+        <div class="row">
+          <div> </div>
+         <div></div>
+        <div> </div>
+        </div>
+      </div>
       <h1 class="text-primary"><b>Welcome to Baton Rouge</b></h1>
 
       <h2 id="funfacts" class="text-danger">Fun Facts</h2>
