📡📺 Checkpoint ./index.html:69253357/2723

--- a/index.html
+++ b/index.html
@@ -32,13 +32,6 @@
         </nav>
         </div>
       </header>
-      <div class="container">
-        <div class="row">
-          <div> </div>
-         <div></div>
-        <div> </div>
-        </div>
-      </div>
       <h1 class="text-primary"><b>Welcome to Baton Rouge</b></h1>
 
       <h2 id="funfacts" class="text-danger">Fun Facts</h2>
@@ -66,6 +59,27 @@
       </p>
         </div> 
       </div>
+      <h3>
+        KEY THINGS IN LOUISIANA THAT ARE BOMB!!!
+      </h3>
+      <div class="container">
+        <div class="row gap-0">
+          <div class="col border border-secondary">SEAFOOD</div>
+          <div class="col border border-secondary">BEIGNETS</div>
+          <div class="col border border-secondary">MARDI GRAS</div>
+        </div>
+     <div class="row gap-0">
+          <div class="col border border-secondary">DIVERSITY</div>
+          <div class="col border border-secondary">GUMBO</div>
+          <div class="col border border-secondary">MAGNOLIA TREES</div>
+        </div>
+      <div class="row gap-0">
+          <div class="col border border-secondary">FOOTBALL</div>
+          <div class="col border border-secondary">NEW ORLEANS</div>
+          <div class="col border border-secondary">PLANT WORK</div>
+        </div>
+      </div>
+      
      <h2 id="europeansettlement" class="text-danger border p-3 border">European Settlement</h2>
      <div class="card p-3 border">
        <img class="card-img-top"
