🚉🍗 Checkpoint ./about.html:69253357/1059 ./index.html:69253357/188

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <a class="nav nav-link" href="index.html">HOME</a>
           <a class="nav nav-link" href="gallery.html">GALLERY</a>
           <a class="nav nav-link" href="contact.html">CONTACT</a>
+          <a class="nav nav-link" href="about.html">ABOUT</a>
         </nav>
         </div>
       </header>
@@ -59,12 +60,16 @@
       </p>
         </div> 
       </div>
+      <hr>
+      <hr>
+      <hr>
+      
       <h3>
         KEY THINGS IN LOUISIANA THAT ARE BOMB!!!
       </h3>
       <div class="container">
         <div class="row gap-0">
-          <div class="col border border-secondary">SEAFOOD</div>
+          <div class="col border border-secondary">CRAWFISH</div>
           <div class="col border border-secondary">BEIGNETS</div>
           <div class="col border border-secondary">MARDI GRAS</div>
         </div>
@@ -76,10 +81,12 @@
       <div class="row gap-0">
           <div class="col border border-secondary">FOOTBALL</div>
           <div class="col border border-secondary">NEW ORLEANS</div>
-          <div class="col border border-secondary">PLANT WORK</div>
+          <div class="col border border-secondary">MUSIC</div>
         </div>
       </div>
-      
+      <hr>
+      <hr>
+      <hr>
      <h2 id="europeansettlement" class="text-danger border p-3 border">European Settlement</h2>
      <div class="card p-3 border">
        <img class="card-img-top"
