--- a/about.html
+++ b/about.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
+<html lang "en">
+  <head>
+    <title> my about page</title>
+  </head>
+  <body>
 <h1>
   HERE IS A LITTLE TASTE OF ME!!
 </h1>
-
 <p>
 I DID A WEBSITE ABOUT ALL THINGS LOUISIANA! I MAY NOT HAVE BEEN BORN IN LOUISIANA BUT I WAS RAISED HERE. 
 NOW IF YOU LIKE SPICY FOOD AND ARE A SPORTS FANATIC THEN THIS IS A GOOD PLACE TO BE.
@@ -12,3 +17,5 @@ NOW I AM A HISTORY BUFF. SO WHY NOT SHARE THE RICH HISTORY OF HOW THE "RED STICK
 BATON ROUGE IS THE CAPITAL OF LOUISIANA. OUR RICH HISTORY MAKES US. NOT ALL OF IT GOOD, BUT THAT IS OKAY.
 SO I HOPE YOU ENJOY IT AND COME SEE US DOWN IN THE BOOT OR DOWN IN THE BAYOU! 
 </p>
+  </body>
+</html>
