🕷🏗 Checkpoint ./index.html:69253357/11 ./about.html:69253357/151

--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
     <title> my about page</title>
   </head>
   <body>
+    <style>
+      h1{ border-style: dotted; p-2}
+      body { border-style: dashed; p-5}
+    
+    </style>
 <h1>
   HERE IS A LITTLE TASTE OF ME!!
 </h1>
