🎭💖 Checkpoint ./about.html:69253357/59 ./index.html:69253357/72

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <style>
-      h1{ border-style: dotted; p-2}
+      h1{ border-style: dotted; p-2; text-color: #7B68EE}
       body { border-style: dashed; p-5}
     
     </style>
