--- a/about.html
+++ b/about.html
@@ -2,18 +2,32 @@
 <html lang "en">
   <head>
     <title> my about page</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
   </head>
   <body>
     <style>
-      h1{ border-style: dotted; p-2; text-color: #7B68EE}
-      body { border-style: dashed; p-5}
-    
+      h1{ border-style: dotted; p-2}
+      body { border-style: dashed; p-5; background-color: #7B68EE}
+      
     </style>
-<h1>
+    <div class="p-2 bg-danger">
+        <nav class="nav nav-tabs">
+          <a class="nav nav-link" href="index.html">HOME</a>
+          <a class="nav nav-link" href="gallery.html">GALLERY</a>
+          <a class="nav nav-link" href="contact.html">CONTACT</a>
+          <a class="nav nav-link" href="about.html">ABOUT</a>
+        </nav>
+        </div>
+<h1 class="text-align: center">
   HERE IS A LITTLE TASTE OF ME!!
 </h1>
-<p>
-I DID A WEBSITE ABOUT ALL THINGS LOUISIANA! I MAY NOT HAVE BEEN BORN IN LOUISIANA BUT I WAS RAISED HERE. 
+<p class="text-align: center">
+   I DID A WEBSITE ABOUT ALL THINGS LOUISIANA! I MAY NOT HAVE BEEN BORN IN LOUISIANA BUT I WAS RAISED HERE. 
 NOW IF YOU LIKE SPICY FOOD AND ARE A SPORTS FANATIC THEN THIS IS A GOOD PLACE TO BE.
 WE HAVE THE LSU TIGERS AND THE NEW ORLEANS SAINTS. NOW I LOVE MY TEAMS BUT I LOVE FOOD.
 OUT OF EVERY WHERE THAT I HAVE BEEN, I DO COME HOME TO LOUISIANA BECAUSE YOU JUST CANT GET IT ANYWHERE ELSE.
