--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
     <style>
       h1{ border-style: dotted; p-2}
       body { border-style: dashed; p-5; background-color: #7B68EE}
-      
+      h4: hover {
+        color: yellow;
+      }
     </style>
     <div class="p-2 bg-danger">
         <nav class="nav nav-tabs">
@@ -23,10 +25,10 @@
           <a class="nav nav-link" href="about.html">ABOUT</a>
         </nav>
         </div>
-<h1 class="text-align: center">
+<h1 class="border text-center">
   HERE IS A LITTLE TASTE OF ME!!
 </h1>
-<p class="text-align: center">
+<p class="border text-center">
    I DID A WEBSITE ABOUT ALL THINGS LOUISIANA! I MAY NOT HAVE BEEN BORN IN LOUISIANA BUT I WAS RAISED HERE. 
 NOW IF YOU LIKE SPICY FOOD AND ARE A SPORTS FANATIC THEN THIS IS A GOOD PLACE TO BE.
 WE HAVE THE LSU TIGERS AND THE NEW ORLEANS SAINTS. NOW I LOVE MY TEAMS BUT I LOVE FOOD.
@@ -37,4 +39,10 @@ BATON ROUGE IS THE CAPITAL OF LOUISIANA. OUR RICH HISTORY MAKES US. NOT ALL OF I
 SO I HOPE YOU ENJOY IT AND COME SEE US DOWN IN THE BOOT OR DOWN IN THE BAYOU! 
 </p>
   </body>
+  <footer>
+  <h4>
+    website by andrea ballard
+    </h4>
+  
+  </footer>
 </html>
