🍜👁 Checkpoint ./about.html:69253357/26 ./contact.html:69253357/41 ./gallery.html:69253357/68 ./index.html:69253357/129

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ SO I HOPE YOU ENJOY IT AND COME SEE US DOWN IN THE BOOT OR DOWN IN THE BAYOU!
 </p>
   </body>
   <footer>
-  <h4 class>
+  <h4 class= "border text-center">
     website by andrea ballard
     </h4>
   
