--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,7 @@
       <a  class="nav-link" href="index.html">HOME</a>
       <a class="nav-link" href="gallery.html">GALLERY</a>
       <a class="nav-link" href="contact.html">CONTACT</a>
+      <a class="nav-link" href="about.html">ABOUT</a>    
     </nav>
   </head>
   <body class="bg-secondary">
