--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
              
         <p class="bg-warning border text-center fs-3">
         <b>In 1779, the Spanish defeated the English at Fort Butte and captured
-        Baton Rouge. During Spanish Colonial occupation, the city was part of
-          West Florida and a fort called Fort San Carlos was built on the river.</b>
+        Baton Rouge. <span class="text-secondary">During Spanish Colonial occupation, the city was part of
+          West Florida and a fort called Fort San Carlos was built on the river.</span></b>
       </p>
     
       <p class="bg-warning border text-center fs-3">
@@ -139,10 +139,10 @@
       <p class="fs-3">
         <b>In 1846, the city replaced New Orleans as the state capital and
         construction began on the Neo-Gothic capitol building, which is now a
-        National Historic Landmark. Baton Rouge was also the site of the first
+        National Historic Landmark. <span class="text-danger">Baton Rouge was also the site of the first
         major boycott of the South during the Civil Rights Movement, when
         African Americans refused to ride segregated buses. The boycott sparked
-          a national conversation and led to other notable protests.</b>
+          a national conversation and led to other notable protests.</span></b>
       </p>
   <ul>
     <li></li>
