--- a/index.html
+++ b/index.html
@@ -145,17 +145,16 @@
           a national conversation and led to other notable protests.</span></b>
       </p>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Rich History</li>
+    <li>Football Fanatics</li>
+    <li> Best food in the World</li>
   </ul>
     </main>
   </body>
-  <hr />
+  <hr>
   <footer class="text-warning">
     Section Bookmarks:
    <div>
-     
     </div>
     <nav>
       <a href="#funfacts">Fun Facts</a><br />
@@ -177,6 +176,5 @@
 <form style="color: deeppink">
         <input type="radio" name="thumbs" /><label>Thumbs Up!</label>
         <input type="radio" name="thumbs" /><label>Thumbs Down!</label>
-
-
-</html>
+</form>
+  </html>
