--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <title>contact</title>
-  <header>
+  <head>
+        <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
     <img
       alt="welcome"
       width="100%"
@@ -13,8 +19,8 @@
       <a href="contact.html">CONTACT</a>
       <a href="about.html">ABOUT</a>
     </nav>
-  </header>
-  <body>
+  </head>
+  <body class="bg-danger">
     <main>
       <h1>
         <u>Contact</u>
