🏭🗺 Checkpoint ./index.html:69253357/78 ./functions.html:69253357/35

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    function looper(){}
     <style>
       body {
         background-color: #fa8072;
@@ -22,7 +23,6 @@
   <body>
     <main>
       <title>Baton Rouge</title>
-      <header>
         <img
           alt="welcome"
           width="100%"
@@ -36,7 +36,6 @@
             <a class="nav nav-link" href="about.html">ABOUT</a>
           </nav>
         </div>
-      </header>
       <h1 class="text-primary"><b>Welcome to Baton Rouge</b></h1>
 
       <h2 id="funfacts" class="text-danger">Fun Facts</h2>
