✨🚃 Checkpoint ./index.html:69253357/254

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    function looper(){}
+    function looper(){
+    for(count = 0; count < 25; count ++ ) 
+    
+    } else { 
+              document.write(output)
+                              }
     <style>
       body {
         background-color: #fa8072;
