--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
   <footer>
     <hr />
     <h4>
-      
+      My Contact Information:
     </h4>
      <div class="container">
         <div class="row gap-0">
